SCSS resource generation for previous fix

--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -140,7 +140,7 @@
             </div>
           </div>
           <h4>Email</h4>
-            <a href="mailto:support@buddysco.com">support@buddysco.com</a>
+            <a href="mailto:admin@buddysco.com">admin@buddysco.com</a>
           </p>
 
         </div>
