--- a/public/index.html
+++ b/public/index.html
@@ -105,8 +105,8 @@
             <h1 id="best-peer-to-peer-learning-platform">Best peer to peer learning platform</h1>
 <p>Offering best peer study group matching for you!
           </div>
-          <a type="button" class="btn btn-lg btn-primary btn-zoom"
-            href="#contact">Join Buddies</a>
+          <a type="button" class="btn btn-lg btn-primary btn-zoom scroll"
+            href="https://buddysco.com/#contact">Join Buddies</a>
         </div>
       </div>
       <div class="col-lg-6">
