--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 <h2 class=mb-0>Let us find the study group that suits you.</h2>
 </div>
 <div class="text-light container text-center">
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe9aZRCOPtCV5a06K9PpN6YDN73ZAgptC9VvwLRszIMcPp4Dw/viewform?embedded=true" width=640 height=843 frameborder=0 marginheight=0 marginwidth=0>Loading…</iframe>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe9aZRCOPtCV5a06K9PpN6YDN73ZAgptC9VvwLRszIMcPp4Dw/viewform?embedded=true" width=100% height=1000px frameborder=0 marginheight=0 marginwidth=0>Loading…</iframe>
 </div>
 </div>
 </div>
