--- a/index.html
+++ b/index.html
@@ -150,12 +150,38 @@
 <div class=col-lg-4>
 <div class=blog-preview__item>
 <div class=blog-preview__item-thumb>
-<img src=https://buddysco.com/images/single-blog/GroupStudy1.png alt=post-image>
+<img src=https://buddysco.com/images/blog/neet-exam-guide/featureImage.jpeg alt=post-image>
 </div>
 <div class="blog-preview__item-content bg-white">
-<span class=small>September 17, 2022</span>
+<span class=small>April 20, 2024</span>
 <h5 class=mb-0>
-<a class=text-dark href=https://buddysco.com/blog/benefits-of-groupstudy/>Benefits of Group Study</a>
+<a class=text-dark href=https://buddysco.com/blog/neet-exam/>All about NEET(UG) Exam</a>
+</h5>
+</div>
+</div>
+</div>
+<div class=col-lg-4>
+<div class=blog-preview__item>
+<div class=blog-preview__item-thumb>
+<img src=https://buddysco.com/images/blog/cat-exam-guide/featureImage.jpeg alt=post-image>
+</div>
+<div class="blog-preview__item-content bg-white">
+<span class=small>April 1, 2024</span>
+<h5 class=mb-0>
+<a class=text-dark href=https://buddysco.com/blog/cat-exam/>All about CAT Entrance Exam</a>
+</h5>
+</div>
+</div>
+</div>
+<div class=col-lg-4>
+<div class=blog-preview__item>
+<div class=blog-preview__item-thumb>
+<img src=https://buddysco.com/images/blog/master-competitive-exam-prep/featureImage.webp alt=post-image>
+</div>
+<div class="blog-preview__item-content bg-white">
+<span class=small>March 25, 2024</span>
+<h5 class=mb-0>
+<a class=text-dark href=https://buddysco.com/blog/mastering-competitive-exam-prep/>Mastering Competitive Exam Preparation: A Modern Guide</a>
 </h5>
 </div>
 </div>
