deploy: 00691b5f5a0206f2a3597f5eb2262a169fd2c675

--- a/index.html
+++ b/index.html
@@ -150,6 +150,19 @@
 <div class=col-lg-4>
 <div class=blog-preview__item>
 <div class=blog-preview__item-thumb>
+<img src=https://buddysco.com/images/blog/cat-exam-success/feature-image.png alt=post-image>
+</div>
+<div class="blog-preview__item-content bg-white">
+<span class=small>June 1, 2024</span>
+<h5 class=mb-0>
+<a class=text-dark href=https://buddysco.com/blog/somjit-blog/>CAT Exam Success</a>
+</h5>
+</div>
+</div>
+</div>
+<div class=col-lg-4>
+<div class=blog-preview__item>
+<div class=blog-preview__item-thumb>
 <img src=https://buddysco.com/images/blog/neet-exam-guide/featureImage.jpeg alt=post-image>
 </div>
 <div class="blog-preview__item-content bg-white">
@@ -169,19 +182,6 @@
 <span class=small>April 1, 2024</span>
 <h5 class=mb-0>
 <a class=text-dark href=https://buddysco.com/blog/cat-exam/>All about CAT Entrance Exam</a>
-</h5>
-</div>
-</div>
-</div>
-<div class=col-lg-4>
-<div class=blog-preview__item>
-<div class=blog-preview__item-thumb>
-<img src=https://buddysco.com/images/blog/master-competitive-exam-prep/featureImage.webp alt=post-image>
-</div>
-<div class="blog-preview__item-content bg-white">
-<span class=small>March 25, 2024</span>
-<h5 class=mb-0>
-<a class=text-dark href=https://buddysco.com/blog/mastering-competitive-exam-prep/>Mastering Competitive Exam Preparation: A Modern Guide</a>
 </h5>
 </div>
 </div>
