deploy: 802b9a3502015a075438b76008e0d9caa175afa1

--- a/privacy_policy/index.html
+++ b/privacy_policy/index.html
@@ -1,7 +1,7 @@
 <!doctype html><html>
 <head>
 <meta charset=utf-8>
-<title>success</title>
+<title>Privacy Policy</title>
 <meta name=title content="Group Study">
 <meta name=description content="Study in groups for best retention. Best Peer to Peer learning App. Try it today. We have special Beta Launch Offers.">
 <meta name=keywords content="Group Study,Student,Team Work,Study Online,Student Group">
@@ -52,41 +52,104 @@
 </nav>
 <div id=content>
 <header class=breadCrumb>
+<div class=container>
+<div class=row>
+<div class="col-lg-10 col-md-12 offset-lg-1 offset-md-0 text-center">
+<h3 class=breadCrumb__title>Privacy Policy</h3>
+</div>
+</div>
+<ul class=post-meta>
+</ul>
+</div>
+</div>
+</div>
+</div>
+</header>
+<section class="section singleBlog">
 <div class=svg-img>
 <img src=https://buddysco.com/images/hero/figure-svg.svg alt>
 </div>
-<div class=animate-shape><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 600 600"><defs><linearGradient id="d" x1=".929" y1=".111" x2=".263" y2=".935" gradientUnits="objectBoundingBox"><stop offset="0" stop-color="#f1f6f9"/><stop offset="1" stop-color="#f1f6f9" stop-opacity="0"/></linearGradient></defs><g data-name="blob-shape (3)"><path class="blob" fill="url(#d)" d="M455.4 151.1c43.1 36.7 73.4 92.8 60.8 136.3-12.7 43.5-68.1 74.4-111.3 119.4-43.1 45-74 104.1-109.8 109-35.9 5-76.7-44.2-111.8-89.2-35.2-45-64.7-85.8-70.8-132.6-6-46.8 11.6-99.6 46.7-136.3 35.2-36.6 88-57.2 142.4-58.8 54.5-1.7 110.6 15.6 153.8 52.2z"/></g></svg>
+<div class=animate-shape>
+<img src=https://buddysco.com/images/skill/skill-background-shape.svg alt><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 600 600"><defs><linearGradient id="d" x1=".929" y1=".111" x2=".263" y2=".935" gradientUnits="objectBoundingBox"><stop offset="0" stop-color="#f1f6f9"/><stop offset="1" stop-color="#f1f6f9" stop-opacity="0"/></linearGradient></defs><g data-name="blob-shape (3)"><path class="blob" fill="url(#d)" d="M455.4 151.1c43.1 36.7 73.4 92.8 60.8 136.3-12.7 43.5-68.1 74.4-111.3 119.4-43.1 45-74 104.1-109.8 109-35.9 5-76.7-44.2-111.8-89.2-35.2-45-64.7-85.8-70.8-132.6-6-46.8 11.6-99.6 46.7-136.3 35.2-36.6 88-57.2 142.4-58.8 54.5-1.7 110.6 15.6 153.8 52.2z"/></g></svg>
 </div>
 <div class=animate-pattern>
 <img src=https://buddysco.com/images/service/background-pattern.svg alt=background-shape>
 </div>
 <div class=container>
 <div class=row>
-<div class="col-12 text-center">
-<h3 class="breadCrumb__title text-capitalize">success</h3>
-<nav aria-label=breadcrumb class="d-flex justify-content-center">
-<ol class="breadcrumb align-items-center">
-<li>Showing all posts with the tag "success"</li>
-</ol>
-</nav>
+<div class=col-lg-12>
+<div class=singleBlog__feature>
 </div>
 </div>
 </div>
-</header>
-<section class="section blog-page">
-<div class=container>
-<div class=row>
-<div class=col-lg-4>
-<div class=blog-page__item>
-<div class=blog-page__item-thumb>
-<img src=https://buddysco.com/images/blog/cat-exam-success/feature-image.png alt=post-image>
-</div>
-<div class="blog-page__item-content bg-white">
-<span class=small>June 1, 2024</span>
-<h5 class=mb-0>
-<a class=text-dark href=https://buddysco.com/blog/somjit-blog/>CAT Exam Success</a>
-</h5>
-</div>
+<div class="row mt-5">
+<div class=col-lg-12>
+<div class=singleBlog__content>
+<p>Last updated: October 14, 2024</p>
+<h3 id=overview>Overview</h3>
+<p>This privacy notice for BuddysCo (“we,” “us,” or “our”) explains how we collect, use, store, and share personal information when you (“user” or “you”) access our website or mobile application (“Services”). By using our Services, you agree to this notice. If you have concerns, please contact us at <a href=mailto:admin@buddysco.com>admin@buddysco.com</a>.</p>
+<h3 id=information-we-collect>Information We Collect</h3>
+<ul>
+<li>Personal data you provide (e.g., contact details, account login).</li>
+<li>Usage data automatically collected (e.g., device details, IP address).</li>
+<li>Cookies and similar technologies for analytics and functionality.</li>
+<li>No sensitive personal information (e.g., race, health) is intentionally collected.</li>
+<li>We do not knowingly collect data from minors under 13.</li>
+</ul>
+<h3 id=how-we-use-your-information>How We Use Your Information</h3>
+<ul>
+<li>To provide and improve our Services.</li>
+<li>For communication, account management, and security.</li>
+<li>For analytics, research, and legal compliance.</li>
+<li>To meet Google OAuth requirements for user consent and transparency.</li>
+</ul>
+<h3 id=sharing-your-information>Sharing Your Information</h3>
+<ul>
+<li>We do not share or sell personal data except as needed for service providers or when required by law.</li>
+<li>Service providers must maintain data protection standards.</li>
+</ul>
+<h3 id=international-data-transfers>International Data Transfers</h3>
+<ul>
+<li>Your data may be processed in countries with different laws. We take steps to protect your information according to applicable regulations.</li>
+</ul>
+<h3 id=data-retention>Data Retention</h3>
+<ul>
+<li>We keep personal data only as long as necessary or legally required.</li>
+<li>You may request deletion by contacting us.</li>
+</ul>
+<h3 id=security-measures>Security Measures</h3>
+<ul>
+<li>We use technical and organizational safeguards.</li>
+<li>No data transmission is fully secure, but we strive for industry-standard protections.</li>
+</ul>
+<h3 id=your-rights>Your Rights</h3>
+<ul>
+<li>Depending on your region, you may access, correct, or delete your personal data.</li>
+<li>Contact us at <a href=mailto:admin@buddysco.com>admin@buddysco.com</a> to exercise your rights.</li>
+</ul>
+<h3 id=social-logins>Social Logins</h3>
+<ul>
+<li>When you log in via social platforms, we may receive basic profile information.</li>
+<li>These platforms may collect data separately, so review their policies.</li>
+</ul>
+<h3 id=do-not-track>Do-Not-Track</h3>
+<ul>
+<li>Our Services do not respond to DNT signals at this time.</li>
+</ul>
+<h3 id=childrens-privacy>Children’s Privacy</h3>
+<ul>
+<li>We do not knowingly collect data from children under 13.</li>
+<li>If you believe we inadvertently collected such data, contact us to delete it.</li>
+</ul>
+<h3 id=updates>Updates</h3>
+<ul>
+<li>We may update this notice; changes are effective upon posting.</li>
+<li>Please review this policy periodically.</li>
+</ul>
+<h3 id=contact-us>Contact Us</h3>
+<ul>
+<li>For questions or requests, reach us at <a href=mailto:admin@buddysco.com>admin@buddysco.com</a>.</li>
+</ul>
 </div>
 </div>
 </div>
